--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -29,8 +29,8 @@ table inet filter {
 	chain TCP {
 		# tcp dport { 53 } 									counter accept comment "count accepted input dns packets"
 		# tcp dport { 80, 443, 17105 }								counter accept comment "count accepted input http packets"
-		tcp dport { 17105, 16179 }								counter accept
-		# tcp dport { 22 }									counter accept "count accepted input http packets"
+		tcp dport { 17105, 16179 }							counter accept
+		tcp dport { 41122 }									counter accept "count accepted input http packets"
 	}
 
 	chain UDP {
