correct ssh port error

--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -8,7 +8,7 @@ flush ruleset
 table inet filter {
 	chain INPUT {
 		type filter hook input priority 0; policy drop; 	counter comment "count dropped packets"
-		ct state { established, related }							accept
+		ct state { established, related }					accept
 		iif lo accept
 		ct state invalid drop
 		# ether type arp accept
@@ -28,9 +28,9 @@ table inet filter {
 
 	chain TCP {
 		# tcp dport { 53 } 									counter accept comment "count accepted input dns packets"
-		# tcp dport { 80, 443, 17105 }								counter accept comment "count accepted input http packets"
-		tcp dport { 17105, 16179 }							counter accept
-		tcp dport { 41122 }									counter accept "count accepted input http packets"
+		# tcp dport { 80, 443, 17105 }						counter accept comment "count accepted input http packets"
+		tcp dport { 17105, 16179, 41122 }					counter accept "count accepted input straxui/ssh packets"
+		# tcp dport { 41122 }								counter accept "count accepted input ssh packets"
 	}
 
 	chain UDP {
