test for error correction

--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -30,7 +30,7 @@ table inet filter {
 		# tcp dport { 53 } 									counter accept comment "count accepted input dns packets"
 		# tcp dport { 80, 443, 17105 }						counter accept comment "count accepted input http packets"
 		# tcp dport { 41122 }								counter accept "count accepted input ssh packets"
-		tcp dport { 17105, 16179, 41122 }					counter accept "count accepted input straxui/ssh packets"
+		tcp dport { 17105, 16179, 41122 }					counter accept "count accepted input straxui/ssh packets";
 	}
 
 	chain UDP {
