--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -5,6 +5,10 @@
 
 flush ruleset
 
+# tcp dport { 53 } 									counter accept comment "count accepted input dns packets"
+# tcp dport { 80, 443, 17105 }						counter accept comment "count accepted input http packets"
+# tcp dport { 41122 }								counter accept "count accepted input ssh packets"
+
 table inet filter {
 	chain INPUT {
 		type filter hook input priority 0; policy drop; 	counter comment "count dropped packets"
@@ -27,10 +31,7 @@ table inet filter {
 	}
 
 	chain TCP {
-		# tcp dport { 53 } 									counter accept comment "count accepted input dns packets"
-		# tcp dport { 80, 443, 17105 }						counter accept comment "count accepted input http packets"
-		# tcp dport { 41122 }								counter accept "count accepted input ssh packets"
-		tcp dport { 17105, 16179, 41122 }					counter accept "count accepted input straxui/ssh packets"
+        tcp dport { 17105, 16179, 41122 }                   counter accept "count accepted input straxui or ssh packets"
 	}
 
 	chain UDP {
