etc/nftables.conf error correction

--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -10,6 +10,13 @@ flush ruleset
 # tcp dport { 41122 }								counter accept "count accepted input ssh packets"
 
 table inet filter {
+	counter cnt_straxui {
+		comment "count accepted input straxui packets"
+	}
+
+	counter cnt_ssh {
+		comment "count accepted input ssh packets"
+	}
 	chain INPUT {
 		type filter hook input priority 0; policy drop; 	counter comment "count dropped packets"
 		ct state { established, related }					accept
@@ -31,7 +38,10 @@ table inet filter {
 	}
 
 	chain TCP {
-        tcp dport { 17105, 16179, 41122 }                   counter accept "count accepted input straxui or ssh packets"
+		#type filter hook input priority filter; policy accept;
+		tcp dport 17105										counter name cnt_straxui accept
+		tcp dport 16179										counter name cnt_straxui accept
+		tcp dport 41122 									counter name cnt_ssh accept
 	}
 
 	chain UDP {
