update sshd settings files

--- a/etc/ssh/sshd_config.d/pubkey-accepted-types.conf
+++ b/etc/ssh/sshd_config.d/pubkey-accepted-types.conf
@@ -1,3 +1,9 @@
+# PubkeyAuthentication yes already set in pubkey-only.conf
+
+# The default is to check both .ssh/authorized_keys and .ssh/authorized_keys2
+# but this is overridden so installations will only check .ssh/authorized_keys
+AuthorizedKeysFile  .ssh/authorized_keys
+
 PubkeyAcceptedKeyTypes ssh-ed25519,ssh-ed25519-cert-v01@openssh.com,sk-ssh-ed25519@openssh.com,sk-ssh-ed25519-cert-v01@openssh.com
 
 #note: these types are forbidden:
