correct error cnt stratis_evm/geth

--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -43,14 +43,14 @@ table inet filter {
 
 	chain TCP {
 		#type filter hook input priority filter; policy accept;
-		tcp dport 30303										counter name cnt_stratis_evm accept
+		tcp dport 30303										counter name cnt_geth accept
 		tcp dport 13000										counter name cnt_prysm accept
 		tcp dport 41122 									counter name cnt_ssh accept
 	}
 
 	chain UDP {
 		# udp dport { 53 }									counter accept comment "count accepted input dns packets"
-		udp dport 30303										counter name cnt_stratis_evm accept
+		udp dport 30303										counter name cnt_geth accept
 		udp dport 12000										counter name cnt_prysm accept
 	}
 }
