add blocked nf tables ports

--- a/etc/nftables.conf
+++ b/etc/nftables.conf
@@ -7,50 +7,60 @@
 
 flush ruleset
 
-# tcp dport { 53 } 									counter accept comment "count accepted input dns packets"
-# tcp dport { 80, 443, 17105 }						counter accept comment "count accepted input http packets"
+# tcp dport { 53 } 								counter accept comment "count accepted input dns packets"
+# tcp dport { 80, 443, 17105 }							counter accept comment "count accepted input http packets"
 # tcp dport { 41122 }								counter accept "count accepted input ssh packets"
 
 table inet filter {
-	counter cnt_geth {
+	counter cnt_geth_accept {
 		comment "count accepted input stratis evm / geth packets"
 	}
-	counter cnt_prysm {
+	counter cnt_geth_drop {
+		comment "count dropped input stratis evm / geth packets"
+	}
+	counter cnt_prysm_accept {
 		comment "count accepted input stratis evm / prysm packets"
 	}
-	counter cnt_ssh {
+	counter cnt_prysm_drop {
+		comment "count dropped input stratis evm / prysm packets"
+	}
+	counter cnt_ssh_accept {
 		comment "count accepted input ssh packets"
 	}
 	chain INPUT {
-		type filter hook input priority 0; policy drop; 	counter comment "count dropped packets"
-		ct state { established, related }					accept
-		iif lo accept
-		ct state invalid drop
-		# ether type arp accept
-		pkttype { broadcast, multicast } drop
-		ip protocol udp										counter jump UDP
+		type filter hook input priority 0; policy drop; 		counter comment "count dropped packets"
+		ct state { established, related }											accept
+		iif lo 															accept
+		ct state invalid													drop
+		# ether type arp 													accept
+		pkttype { broadcast, multicast } 											drop
+		ip protocol udp							counter jump UDP
 		tcp flags & (fin | syn | rst | ack) == syn			counter jump TCP
 		ip protocol icmp icmp type { destination-unreachable, router-solicitation, router-advertisement, time-exceeded, parameter-problem } accept comment "Accept ICMP"
 	}
 
 	chain FORWARD {
-		type filter hook forward priority 0; policy drop;	counter comment "count dropped packets"
+		type filter hook forward priority 0; policy drop;		counter comment "count dropped packets"
 	}
 
 	chain OUTPUT {
-		type filter hook output priority 0; policy accept;	counter comment "count accepted packets"
+		type filter hook output priority 0; policy accept;		counter comment "count accepted packets"
 	}
 
 	chain TCP {
 		#type filter hook input priority filter; policy accept;
-		tcp dport 30303										counter name cnt_geth accept
-		tcp dport 13000										counter name cnt_prysm accept
-		tcp dport 41122 									counter name cnt_ssh accept
+		tcp dport 30303							counter name cnt_geth_accept				accept
+		tcp dport 13000							counter name cnt_prysm_accept				accept
+		tcp dport 8545							counter name cnt_geth_drop				drop
+		tcp dport 3500							counter name cnt_prysm_drop				drop
+		tcp dport 8551							counter name cnt_prysm_drop				drop
+		tcp dport 4000							counter name cnt_prysm_drop				drop
+		tcp dport 41122 						counter name cnt_ssh_accept				accept
 	}
 
 	chain UDP {
-		# udp dport { 53 }									counter accept comment "count accepted input dns packets"
-		udp dport 30303										counter name cnt_geth accept
-		udp dport 12000										counter name cnt_prysm accept
+		# udp dport { 53 }						counter comment "count accepted input dns packets"	accept 
+		udp dport 30303							counter name cnt_geth_accept				accept
+		udp dport 12000							counter name cnt_prysm_accept				accept
 	}
 }
